--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!-------------- Features Section ----------------->
 
     <section id="features">
-      <div id="feature-title"> <h5>Our Features</h5></div>
+      <div id="section-title"> <h5>Our Features</h5></div>
       <div class="feature-row">
         <div class="feature-col">
           <img src="media/pic-1.png" alt="">
@@ -109,6 +109,7 @@
     <!--------------- Courses Section ----------------->
 
     <section id="courses">
+      <div id="section-title"> <h5>Our Courses</h5></div>
       <div class="container course-row">
         <div class="course-left-col">
           <div class="course-text">
@@ -138,6 +139,7 @@
     <!----------------- Offers Section ------------------->
 
     <section id="offers">
+      <div id="section-title"> <h5>Our Offers</h5></div>
         <div class="offer-left-col">
           <img src="media/offer.png" />
         </div>
@@ -164,6 +166,7 @@
     </section>
 
     <section id="contact">
+      <div id="section-title"> <h5>Contact Us</h5></div>
       <div class=" container contact-row">
         <div class="contact-left-col">
           <!-- <div class="contact-text"> -->
