--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 
     <section id="offers">
       <div id="section-title"> <h5>Our Offers</h5></div>
+        <div class="offer-row">
         <div class="offer-left-col">
           <img src="media/offer.png" />
         </div>
@@ -163,6 +164,7 @@
             </div>
           </div>
         </div>
+          </div>
     </section>
 
     <section id="contact">
